profilematic (1.5.0) unstable; urgency=low
  * Mobile network mode action (Dual/2G/3G)
  * Custom action (running shell script)

 -- Arto Jalkanen <ajalkane@gmail.com>  Tue, 14 Mar 2012 23:45:00 +0300

profilematic (1.4.1) unstable; urgency=low
  * Fixes to installation/startup/rule savings

 -- Arto Jalkanen <ajalkane@gmail.com>  Tue, 09 Mar 2012 23:45:00 +0300

profilematic (1.4.0) unstable; urgency=low
  * Availability action (contributed by Philip Lorenz)
  * Flight Mode action
  * Power saving mode action

 -- Arto Jalkanen <ajalkane@gmail.com>  Tue, 01 Mar 2012 23:45:00 +0300

profilematic (1.3.0) unstable; urgency=low
  * Wifi condition
  * BlueTooth action
  * Saving rules forces refresh

 -- Arto Jalkanen <ajalkane@gmail.com>  Sun, 2 Feb 2012 22:00:00 +0300

profilematic (1.2.0) unstable; urgency=low
  * New backend
  * End time condition
  * Restore previous profile
  * Cell tower id based location rules
  * Default rule
  * UI tweaks

 -- Arto Jalkanen <ajalkane@gmail.com>  Sun, 22 Jan 2012 07:00:30 +0300

profilematic (1.1.1) unstable; urgency=low
  * Small UX improvements:
  * Edit rule: Save instead of accept
  * Accept days: same header in selection
  * Activate at: same header in selection
  * Set profile: same header in selection
  * Selection color blue as in header
  * If only one active day selected, display tho full name (eg. Wednesday instead of Wed)
  * When creating new rules, no days are selected by default

 -- Arto Jalkanen <ajalkane@gmail.com>  Sat, 10 Dec 2011 22:29:30 +0300

profilematic (1.1.0) unstable; urgency=low
  * Background task for switching profiles even if application is closed.

 -- Arto Jalkanen <ajalkane@gmail.com>  Thu, 28 Nov 2011 13:44:30 +0300

profilematic (1.0.0) unstable; urgency=low
  * Initial Release.

 -- Arto Jalkanen <ajalkane@gmail.com>  Thu, 27 Oct 2011 13:44:30 +0300