@@ -1,6 +1,8 @@
 profilematic (1.5.0) unstable; urgency=low
   * Mobile network mode action (Dual/2G/3G)
   * Custom action (running shell script)
+  * Extended availability modes, away etc. (contributed by Philip Lorenz)
+  * Restore previous for BlueTooth
 
  -- Arto Jalkanen <ajalkane@gmail.com>  Tue, 14 Mar 2012 23:45:00 +0300
 
